--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1015.4KB/s(Youtube:不良林), server: 14.152.92.72, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林), server: 14.152.92.77, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-1009.5KB/s(Youtube:不良林), server: 14.152.92.79, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-1.05MB/s(Youtube:不良林), server: 42.157.195.234, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-959.9KB/s(Youtube:不良林), server: 14.152.92.70, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇺🇸 美国-4.15MB/s(Youtube:不良林), server: 34.217.215.198, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
-  - {name: 🇺🇸 美国-3.90MB/s(Youtube:不良林), server: 34.215.130.186, port: 10089, type: vmess, uuid: 3608c9dc-1eeb-48b0-b570-43074b4a0c9e, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 34.215.130.186}}
-  - {name: 🇺🇸 美国-474.2KB/s(Youtube:不良林), server: s1.upyun.online, port: 12340, type: trojan, password: c0276440-f163-4f40-a08c-78b158ce6c4f, sni: s1.upyun.online, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-738.3KB/s(Youtube:不良林), server: s2.upyun.online, port: 12340, type: trojan, password: c0276440-f163-4f40-a08c-78b158ce6c4f, sni: s2.upyun.online, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.62MB/s(Youtube:不良林), server: kr05.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr05.wangxd.life, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-15.47MB/s(Youtube:不良林), server: 54.238.232.202, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 乌克兰-1.65MB/s(Youtube:不良林), server: 422wkl.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 422wkl.fans8.xyz}}
+  - {name: 🇨🇳 中国-1.10MB/s(Youtube:不良林), server: 42.157.195.239, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-1.12MB/s(Youtube:不良林), server: 14.152.92.71, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-1.95MB/s(Youtube:不良林), server: 139.219.130.70, port: 443, type: ss, cipher: aes-256-cfb, password: E4DNMf73kHPrd8Qq7aqGPf7f}
+  - {name: 🇺🇸 美国-3.94MB/s(Youtube:不良林), server: 34.215.130.186, port: 10089, type: vmess, uuid: 3608c9dc-1eeb-48b0-b570-43074b4a0c9e, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 34.215.130.186}}
+  - {name: 🇺🇸 美国-372.2KB/s(Youtube:不良林), server: 45.61.173.125, port: 31224, type: vmess, uuid: b8aaa6e1-f0b3-b9ec-3dfc-bb226c167b33, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.70MB/s(Youtube:不良林), server: bai-piao-wang-zhe-iplc4.98848.xyz, port: 26995, type: vmess, uuid: 39c8ee80-37eb-4af2-a5aa-fdf294162fcd, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /@/YouTube-bai-piao-wang-zhe, ws-headers: {Host: bai-piao-wang-zhe-iplc4.98848.xyz}}
+  - {name: 🇺🇸 美国-716.7KB/s(Youtube:不良林), server: awsxjp.moonfree.top, port: 443, type: vmess, uuid: 6e9eeae6-c3d1-439e-9f7a-213fe09b2dbe, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: awsxjp.moonfree.top}}
+  - {name: 🇺🇸 美国-4.57MB/s(Youtube:不良林), server: fhcarm2.gaox.ml, port: 443, type: trojan, password: f39bd244-f5fe-415c-8b98-a1e5250bf178, sni: fhcarm2.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1015.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1009.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-959.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-474.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-738.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
+      - 🇯🇵 日本-15.47MB/s(Youtube:不良林)
+      - 乌克兰-1.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-372.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-716.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.57MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1015.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1009.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-959.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-474.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-738.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
+      - 🇯🇵 日本-15.47MB/s(Youtube:不良林)
+      - 乌克兰-1.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-372.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-716.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.57MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1015.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1009.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-959.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-474.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-738.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
+      - 🇯🇵 日本-15.47MB/s(Youtube:不良林)
+      - 乌克兰-1.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-372.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-716.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.57MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1015.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1009.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-959.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-474.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-738.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
+      - 🇯🇵 日本-15.47MB/s(Youtube:不良林)
+      - 乌克兰-1.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-372.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-716.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.57MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1015.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1009.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-959.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-474.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-738.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
+      - 🇯🇵 日本-15.47MB/s(Youtube:不良林)
+      - 乌克兰-1.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-372.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-716.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.57MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1015.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1009.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-959.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-474.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-738.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
+      - 🇯🇵 日本-15.47MB/s(Youtube:不良林)
+      - 乌克兰-1.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-372.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-716.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.57MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1015.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1009.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-959.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-474.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-738.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
+      - 🇯🇵 日本-15.47MB/s(Youtube:不良林)
+      - 乌克兰-1.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-372.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-716.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.57MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
